feat: Add GitHub Actions workflow for continuous deployment using SCP and Docker Compose, along with an scpignore file.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,8 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           source: "."
           target: "~/city-r"
+          rm: true
+          exclude: ".git, .github, node_modules, *.tar.gz"
 
       - name: Execute docker-compose via SSH
         uses: appleboy/ssh-action@master
