--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,10 @@ jobs:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
-          source: "go.mod,go.sum,main.go,Dockerfile,docker-compose.yml,views,static"
+          source: "go.mod,go.sum,main.go,Dockerfile,docker-compose.yml,views/*,static/*"
           target: "~/city-r"
-          rm: true
+          tar_tmp_path: "ssh_tar_tmp"
+          timeout: 120s
 
       - name: Execute docker-compose via SSH
         uses: appleboy/ssh-action@master
