--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,37 +2,19 @@ name: Deploy to Server
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
-
+    runs-on: self-hosted
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Copy files to server via SCP
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          password: ${{ secrets.SERVER_PASSWORD }}
-          source: "go.mod,go.sum,main.go,Dockerfile,docker-compose.yml,views/*,static/*"
-          target: "~/city-r"
-          tar_tmp_path: "ssh_tar_tmp"
-          timeout: 120s
-
-      - name: Execute docker-compose via SSH
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          password: ${{ secrets.SERVER_PASSWORD }}
-          command_timeout: 30m
-          script: |
-            cd ~/city-r
-            docker compose down || true
-            docker compose up -d --build
-            docker image prune -f
+    - uses: actions/checkout@v4
+    
+    - name: Deploy application
+      run: |
+        cd ~/city-r
+        git fetch origin
+        git reset --hard origin/main
+        docker compose down --remove-orphans
+        docker compose up -d --build
