--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Test Connection via SSH
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          password: ${{ secrets.SERVER_PASSWORD }}
+          script: echo "Connection Successful"
+
       - name: Copy files to server via SCP
         uses: appleboy/scp-action@v0.1.7
         with:
@@ -23,6 +31,9 @@ jobs:
           target: "~/city-r"
           rm: true
           timeout: 10m
+          command_timeout: 10m
+          debug: true
+          tar_exec: true
 
       - name: Execute docker-compose via SSH
         uses: appleboy/ssh-action@v1.2.0
