--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,13 +13,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Network Reachability Check
+        run: |
+          echo "Checking if IP is reachable..."
+          ping -c 3 ${{ secrets.SERVER_IP }} || echo "Ping failed (might be blocked, that's okay)"
+          echo "Checking if Port 22 is open..."
+          nc -zv -w 5 ${{ secrets.SERVER_IP }} 22
+
       - name: Test Connection via SSH
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
-          script: echo "Connection Successful"
+          port: 22
+          debug: true
+          command_timeout: 2m
+          script: |
+             echo "Login successful"
+             uname -a
 
       - name: Copy files to server via SCP
         uses: appleboy/scp-action@v0.1.7
