--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,25 +13,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Network Reachability Check
+      - name: Raw SSH Debug
         run: |
-          echo "Checking if IP is reachable..."
-          ping -c 3 ${{ secrets.SERVER_IP }} || echo "Ping failed (might be blocked, that's okay)"
-          echo "Checking if Port 22 is open..."
-          nc -zv -w 5 ${{ secrets.SERVER_IP }} 22
-
-      - name: Test Connection via SSH
-        uses: appleboy/ssh-action@v1.2.0
-        with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          password: ${{ secrets.SERVER_PASSWORD }}
-          port: 22
-          debug: true
-          command_timeout: 2m
-          script: |
-             echo "Login successful"
-             uname -a
+          sudo apt-get update && sudo apt-get install -y sshpass
+          sshpass -p "${{ secrets.SERVER_PASSWORD }}" ssh -o StrictHostKeyChecking=no -o ConnectTimeout=10 -vvv ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "echo 'Hello from Raw SSH'; uname -a; exit"
 
       - name: Copy files to server via SCP
         uses: appleboy/scp-action@v0.1.7
