--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Raw SSH Debug
-        run: |
-          sudo apt-get update && sudo apt-get install -y sshpass
-          sshpass -p "${{ secrets.SERVER_PASSWORD }}" ssh -o StrictHostKeyChecking=no -o ConnectTimeout=10 -vvv ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "echo 'Hello from Raw SSH'; uname -a; exit"
+      - name: Test Connection
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          password: ${{ secrets.SERVER_PASSWORD }}
+          script: echo "SSH Connection Successful"
 
       - name: Copy files to server via SCP
         uses: appleboy/scp-action@v0.1.7
