--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Server
+name: Deploy to VPS
 
 on:
   push:
@@ -8,42 +8,38 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Test Connection
-        uses: appleboy/ssh-action@v1.2.0
+      - name: Setup Go
+        uses: actions/setup-go@v5
         with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          password: ${{ secrets.SERVER_PASSWORD }}
-          script: echo "SSH Connection Successful"
+          go-version: '1.24'
 
-      - name: Copy files to server via SCP
+      - name: Build Binary
+        run: |
+          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o mms main.go
+
+      - name: Copy files via SCP
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USERNAME }}
+          username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASSWORD }}
-          source: "go.mod,go.sum,main.go,Dockerfile,docker-compose.yml,views,static"
-          target: "~/city-r"
-          rm: true
+          source: "mms,views,static,Dockerfile,docker-compose.yml"
+          target: "/home/${{ secrets.SERVER_USER }}/mms"
+          strip_components: 0
           timeout: 10m
           command_timeout: 10m
-          debug: true
-          tar_exec: true
 
-      - name: Execute docker-compose via SSH
-        uses: appleboy/ssh-action@v1.2.0
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USERNAME }}
+          username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASSWORD }}
-          command_timeout: 30m
           script: |
-            cd ~/city-r
-            docker compose down || true
-            docker compose up -d --build
+            cd /home/${{ secrets.SERVER_USER }}/mms
+            docker compose up --build -d
             docker image prune -f
