--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Build Binary
         run: |
-          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o mms main.go
+          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o city-r-app main.go
 
       - name: Cleanup for SCP
         run: |
@@ -32,8 +32,8 @@ jobs:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASSWORD }}
-          source: "mms,views,static,Dockerfile,docker-compose.yml"
-          target: "/home/${{ secrets.SERVER_USER }}/mms"
+          source: "city-r-app,views,static,Dockerfile,docker-compose.yml"
+          target: "/home/${{ secrets.SERVER_USER }}/city-r"
           strip_components: 0
           timeout: 10m
           command_timeout: 10m
@@ -47,6 +47,6 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
-            cd /home/${{ secrets.SERVER_USER }}/mms
+            cd /home/${{ secrets.SERVER_USER }}/city-r
             docker compose up --build -d
             docker image prune -f
